# cookiecutter-py-rust

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .travis.yml  Cargo.toml  __init__.py  appveyor.yml  build-wheels.sh  cookiecutter.json  setup.py
{{ cookiecutter.project_slug }}/conda-recipe/: conda_build_config.yaml  meta.yaml
{{ cookiecutter.project_slug }}/src/: lib.rs
