[package]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.2.7", features = ["extension-module"]}